[gd_scene load_steps=2 format=3 uid="uid://blqrfosg8okty"]

[ext_resource type="Script" uid="uid://bx37rlthk6mb3" path="res://scripts/overlay.gd" id="1_d607a"]

[node name="Overlay" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d607a")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.196078, 0.156863, 0.176471, 0.941176)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2

[node name="Message" type="RichTextLabel" parent="ColorRect/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Message"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = " Continue "

[node name="BackButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = " Back "

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
